--- a/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -4,14 +4,14 @@
 <div class="row">
   <div class="col">
 
-    <form autocomplete="off">
+    <form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
 
       <!-- Campo de producto -->
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Producto</label>
         <div class="col-sm-9">
 
-          <input type="text" class="form-control" placeholder="Nombre del producto">
+          <input type="text" class="form-control" formControlName="name" placeholder="Nombre del producto">
 
           <span class="form-text text-danger">
             <!-- Debe de ser de 3 letras -->
@@ -24,7 +24,7 @@
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
-          <input type="number" class="form-control" placeholder="Precio del producto">
+          <input type="number" class="form-control" formControlName="price" placeholder="Precio del producto">
           <span class="form-text text-danger">
             El precio debe de ser 0 o mayor
           </span>
@@ -35,7 +35,7 @@
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Existencias</label>
         <div class="col-sm-9">
-          <input type="number" class="form-control" placeholder="Existencias del producto">
+          <input type="number" class="form-control" formControlName="inStorage" placeholder="Existencias del producto">
 
           <span class="form-text text-danger">
             Las existencias deben de ser 0 o mayor
@@ -66,21 +66,27 @@
   <div class="col">
 
     <span>Valid</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.valid | json }}</pre>
 
     <span>Pristine</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.pristine| json }}</pre>
 
     <span>Touched</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.touched | json }}</pre>
 
     <span>Value</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.value | json }}</pre>
 
     <span>Precio</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.controls['price'].value | json }}</pre>
+
+    <span>Precio - errors</span>
+    <pre>{{ myForm.controls['price'].errors | json }}</pre>
 
     <span>Producto</span>
-    <pre>{{ 'objeto' | json }}</pre>
+    <pre>{{ myForm.controls['name'].value | json }}</pre>
+
+    <span>Producto- errors</span>
+    <pre>{{ myForm.controls['name'].errors | json }}</pre>
   </div>
 </div>
