--- a/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -1,102 +1,87 @@
-<h2>Validaciones Reactivas</h2>
+<h2>Reactivos: Switches</h2>
 <hr>
 
-<div class="row">
-  <div class="col">
 
-    <form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSave()">
 
-      <!-- Nombre -->
-      <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Nombre</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Nombre del usuario">
+  <!-- Radio -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Género</label>
+    <div class="col-sm-9">
 
-          <span class="form-text text-danger">
-            Debe de ser en formato de nombre y apellido
-          </span>
-        </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" value="M" id="radioMasculino" formControlName="gender">
+        <label class="form-check-label" for="radioMasculino">
+          Masculino
+        </label>
       </div>
 
-      <!-- Email -->
-      <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Email</label>
-        <div class="col-sm-9">
-          <input type="email" class="form-control" placeholder="Email del usuario">
-          <span class="form-text text-danger">
-            mensaje de error del email
-          </span>
-        </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" value="F" id="radioFemenino" formControlName="gender">
+        <label class="form-check-label" for="radioFemenino">
+          Femenino
+        </label>
       </div>
 
-      <!-- Username -->
-      <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Username</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Nombre código del usuario">
-          <span class="form-text text-danger">
-            El username no puede ser Strider
-          </span>
-        </div>
-      </div>
-
-      <!-- Password -->
-      <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Password</label>
-        <div class="col-sm-9">
-          <input type="password" class="form-control" placeholder="Password de su cuenta">
-
-          <span class="form-text text-danger">
-            La contraseña debe de ser mayor de 6 caracteres.
-          </span>
-        </div>
-      </div>
-
-      <!-- Password2 -->
-      <div class="row mb-3">
-        <label class="col-sm-3 col-form-label">Confirmar</label>
-        <div class="col-sm-9">
-          <input type="password" class="form-control" placeholder="Confirmar la contraseña">
-
-          <span class="form-text text-danger">
-            Las contraseñas deben de ser iguales
-          </span>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col">
-          <button class="btn btn-primary float-end" type="submit">
-            Crear
-          </button>
-        </div>
-      </div>
-
-
-    </form>
+    </div>
   </div>
-</div>
+
+  <!-- Switches -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label">Notificaciones</label>
+    <div class="col-sm-9">
+
+      <div class="form-check form-switch mt-2">
+        <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" formControlName="wantNotifications">
+        <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Switches -->
+  <div class="row mb-3">
+    <label class="col-sm-3 col-form-label"></label>
+    <div class="col-sm-9">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="flexCheckDefault" formControlName="termsAndConditions">
+        <label class="form-check-label" for="flexCheckDefault">
+          Términos y condiciones de uso
+        </label>
+      </div>
+      <span class="form-text text-danger" *ngIf="isValidField('termsAndConditions')">
+        Debe de aceptar las condiciones de uso
+      </span>
+
+    </div>
+  </div>
 
 
-<h2>Form Valid: </h2>
-<h2>Form Status: </h2>
-<h2>Form Pending: </h2>
-<h2>Form errors</h2>
-<pre>{{ 'formulario' | json }}</pre>
+  <!-- Boton submit -->
+  <div class="row">
+    <div class="col">
+      <button class="btn btn-primary float-end" type="submit">
+        Guardar
+      </button>
+    </div>
+  </div>
 
-<h5>Nombre</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Email</h5>
-<pre>{{ 'formulario' | json }}</pre>
-
-<h5>Username</h5>
-<pre>{{ 'formulario' | json }}</pre>
+</form>
 
 
-<h5>Password</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<h5>Valor del formulario</h5>
+<pre>{{ myForm.value | json }}</pre>
+<br>
 
-<h5>Confirmar</h5>
-<pre>{{ 'formulario' | json }}</pre>
+<h5>Persona</h5>
+<pre>{{ 'object' | json }}</pre>
+<br>
+
+<h5>Valid</h5>
+<pre>{{ myForm.valid | json }}</pre>
+
+<!-- <h5>Términos</h5> -->
+<!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
+
+<!-- <br>
+<pre>Condiciones: </pre> -->
