--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -12,7 +12,7 @@
         <div class="col-sm-9">
           <input type="text" class="form-control" placeholder="Nombre del usuario" formControlName="name">
 
-          <span class="form-text text-danger">
+          <span *ngIf="isValidField('name')" class="form-text text-danger">
             Debe de ser en formato de nombre y apellido
           </span>
         </div>
@@ -23,7 +23,7 @@
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
           <input type="email" class="form-control" placeholder="Email del usuario" formControlName="email">
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('email')">
             mensaje de error del email
           </span>
         </div>
@@ -34,7 +34,7 @@
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
           <input type="text" class="form-control" placeholder="Nombre código del usuario" formControlName="username">
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('username')">
             El username no puede ser Strider
           </span>
         </div>
@@ -46,7 +46,7 @@
         <div class="col-sm-9">
           <input type="password" class="form-control" placeholder="Password de su cuenta" formControlName="password">
 
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('password')">
             La contraseña debe de ser mayor de 6 caracteres.
           </span>
         </div>
@@ -58,7 +58,7 @@
         <div class="col-sm-9">
           <input type="password" class="form-control" placeholder="Confirmar la contraseña" formControlName="password2">
 
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('password2')">
             Las contraseñas deben de ser iguales
           </span>
         </div>
@@ -99,4 +99,4 @@
 <pre>{{ myForm.value.password | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ myForm.value.password2 | json }}</pre>
+<pre>{{ myForm.controls['password2'].errors | json }}</pre>
